[project]
name = "pubmed-paper-fetcher-cli"
version = "0.1.2"
description = "Fetch PubMed research papers with industry affiliations."
readme = "README.md"
license = "MIT"
authors = [{name = "hritxx", email = "hriteekroy1869@gmail.com"}]
urls = { "repository" = "https://github.com/hritxx/pubmed-paper-fetcher" }
dependencies = [
	"python>=3.9",
	"requests>=2.32.3,<3.0.0",
	"pandas>=2.2.3,<3.0.0",
	"lxml>=5.0.0,<6.0.0"
]

[project.scripts]
get-papers-list = "cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"